--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimal Scientific Calculator</title>
+    <title>Calculadora Científica</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -167,7 +167,7 @@
                 }
                 
                 
-                calculationHistory.push(${expression} = ${result});
+                calculationHistory.push(`${expression} = ${result}`);
                 if (calculationHistory.length > 10) {
                     calculationHistory.shift();
                 }
